# Cyclone_dronekit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_run.bash  gazeebo_opener.sh  run.sh
Command Scripts/: angles2.txt  configs.py  cyclone.py  gazeebo_opener.sh  high_level.py  mimic_auto.py  onehoop.py  pitch.py  start_simulator.sh  test_state_estimation.py  test_state_retrieval.py  tmp_test.py  visionThread.py
Python-C++ interface/: CMakeLists.txt  V_PP_module.cpp  build_dll.sh  build_lib.sh  vision_cpp_py_test.py
